# rust-animation-programming

./: Cargo.toml  README.md  build.rs  cpp_mat_file.txt  rust_mat_file.txt  rustfmt.toml
rsc/: Woman.gltf
src/: arrow_model.rs  arrow_renderer.rs  camera.rs  color.rs  data.rs  hermite_spline.rs  light.rs  main.rs  model.rs  modelv2.rs  shader.wgsl  state.rs  texture.rs  todo  utils_glam.rs  vertex.rs
src/basic_object/: basic.wgsl  mod.rs  renderer.rs
src/egui/: gui.rs  mod.rs
src/gui/: gui.rs  mod.rs
src/model/: animation.rs  mod.rs  nodes_tree.rs
src/modelv2/: nodes_tree.rs
