[package]
name = "rust-animation-programming"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.90"
bytemuck = { version = "1.16", features = [ "derive" ] }
env_logger = "0.11.5"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "22.0"
pollster = "0.3"


