[package]
name = "rust-animation-programming"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.90"
bytemuck = { version = "1.16", features = ["derive"] }
egui = { version = "0.30" }
egui-wgpu = { version = "0.30" }
egui-winit = "0.30.0"
env_logger = "0.11.5"
glam = "0.29.2"
gltf = "1.4.1"
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4"
lyon = "1.0.1"
pollster = "0.3"
wgpu = { version = "*", features = ["dx12", "metal", "webgpu"] }